--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,23 @@
 {% extends "layout.html" %}
 {% block body %}
-    <h2>Survey Data</h2>
+    <div style="margin:20px;" >
+    <h2 class="display-1">Survey Data</h2>
 
-    <ul>
-        <li><b>You can take the survey <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWw-znStt5iF2Dc7eIoXNn24Ulxhm9fEDVggtAxoAyXLfyIA/viewform">here</a>.</b></li>
-        <li><b>Total responses submitted</b>: {{ responses }} </li>
-        <li><b>Date/Time first response</b>: {{ first }}</li>
-        <li><b>Date/Time most recent response</b>: {{ last }}</li>
+    <ul class="list-group gap-3 ist-group-flush">
+        <li class="list-group-item list-group-item-primary"><b>You can take the survey <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWw-znStt5iF2Dc7eIoXNn24Ulxhm9fEDVggtAxoAyXLfyIA/viewform">here</a>.</b></li>
+        <li class="list-group-item list-group-item-info""><b>Total responses submitted</b>: {{ responses }} </li>
+        <li class="list-group-item list-group-item-info""><b>Date/Time first response</b>: {{ first }}</li>
+        <li class="list-group-item list-group-item-info""><b>Date/Time most recent response</b>: {{ last }}</li>
     </ul>
 
     <hr>
-    <h2>Survey Questions</h2>
-    <ul>
+    <h2 class="display-1">Survey Questions</h2>
+    <ul class="list-group">
     {% for key, value in label_dict.items() %}
         {%  if key != "Timestamp" %}
-            <li><b>{{ key }}</b>: {{ value }}</li>
+            <li class ="list-group-item list-group-item-secondary"><b>{{ key }}</b>: {{ value }}</li>
         {%  endif %}
     {%  endfor %}
     </ul>
+    </div>
 {% endblock %}
