--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,20 +2,39 @@
 <html lang="en">
 <head>
     <title>Fun Survey Dashboard</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
-<div class="container">
-    <div class="left-column">
-        <ul>
-            {% for key, value in label_dict.items() %}
-                {%  if key != "Timestamp" %}
-                <li><a href="{{ url_for(key) }}">{{ key }}</a></li>
-                {%  endif %}
-            {% endfor %}
-        </ul>
+<nav class="navbar navbar-expand-sm bg-dark">
+  <div class="container-fluid">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li>
+            <a class="dropdown-item" href="{{ url_for('home') }}">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Survey Results by Category</a>
+          <ul class="dropdown-menu">
+              {% for key, value in label_dict.items() %}
+                  {%  if key != "Timestamp" %}
+               <li><a class="dropdown-item" href="{{ url_for(key) }}">{{ key }}</a></li>
+               {%  endif %}
+               {% endfor %}
+          </ul>
+        </li>
+      </ul>
     </div>
+  </div>
+</nav>
 
     <div class="page">
       {% for message in get_flashed_messages() %}
@@ -23,7 +42,5 @@
       {% endfor %}
       {% block body %}{% endblock %}
     </div>
-</div>
-
 </body>
 </html>
